--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,4 +2,6 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Indigitall Web Push - Iván García Ballesteros" />
+<Layout title="Indigitall Web Push - Home">
+  <h1 class="text-6xl font-bold">HOME</h1>
+</Layout>
