feat: user authentication

--- a/src/components/Input.astro
+++ b/src/components/Input.astro
@@ -14,6 +14,6 @@ const { id, type, label } = Astro.props;
     id={id}
     name={id}
     class="rounded-md border border-slate-400 px-4 pb-2 pt-8 focus-within:border-slate-700 focus:border-slate-700 focus-visible:border-slate-700 focus-visible:outline-none active:border-slate-700"
-    type={type as any}
+    type={type}
   />
 </div>
