--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 import ButtonLink from './ButtonLink.astro';
 // const { signOut } = await import('auth-astro/client');
 
-const isLoggedIn = false;
+const { isLoggedIn } = Astro.locals;
 ---
 
 <header class="absolute left-0 right-0 top-0 flex items-center justify-between gap-4 p-4 shadow-md">
@@ -11,9 +11,14 @@ const isLoggedIn = false;
   </ButtonLink>
   {
     isLoggedIn ? (
-      <button id="logout" class="rounded-md bg-slate-600 px-4 py-2 font-geist text-lg text-slate-50 transition hover:bg-slate-900">
-        Logout
-      </button>
+      <div class="flex items-center justify-center gap-8">
+        <button id="logout" class="rounded-md bg-slate-600 px-4 py-2 font-geist text-lg text-slate-50 transition hover:bg-slate-900">
+          Logout
+        </button>
+        <ButtonLink id="profile" path="user-profile">
+          Profile
+        </ButtonLink>
+      </div>
     ) : (
       <div class="flex items-center justify-center gap-8">
         <ButtonLink id="signup" path="signup">
@@ -30,14 +35,20 @@ const isLoggedIn = false;
 <script>
   const logoutButton = document.querySelector('#logout');
 
-  logoutButton!.addEventListener('click', () => {
-    handleLogout();
-  });
+  if (logoutButton) {
+    logoutButton.addEventListener('click', () => {
+      handleLogout();
+    });
+  }
 
   const handleLogout = async () => {
     const { logout } = await import('../api/indigitall');
-    logout().then(() => {
-      window.location.href = '/';
-    });
+    const { signOut } = await import('auth-astro/client');
+
+    signOut()
+      .then(() => logout())
+      .then(() => {
+        window.location.href = '/';
+      });
   };
 </script>
