--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,5 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Indigitall Web Push - Home">
-  <h1 class="text-6xl font-bold">HOME</h1>
+  <h1 class="font-geist text-6xl font-bold text-slate-700">HOME</h1>
 </Layout>
