--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,5 @@
 ---
 import ButtonLink from './ButtonLink.astro';
-// const { signOut } = await import('auth-astro/client');
 
 const { isLoggedIn } = Astro.locals;
 ---
@@ -42,11 +41,11 @@ const { isLoggedIn } = Astro.locals;
   }
 
   const handleLogout = async () => {
-    const { logout } = await import('../api/indigitall');
-    const { signOut } = await import('auth-astro/client');
+    const { logoutIndigitall } = await import('../api/indigitall');
+    const { userSignOut } = await import('../auth/auth');
 
-    signOut()
-      .then(() => logout())
+    userSignOut()
+      .then(() => logoutIndigitall())
       .then(() => {
         window.location.href = '/';
       });
